welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
max2Value:6: error: value max1 is not a member of Int
    	if (max1<=nums(i)) {max2=max1 max1=nums(i)}
                                      ^